--- a/GreenishWarblerGenomics2023.qmd
+++ b/GreenishWarblerGenomics2023.qmd
@@ -290,9 +290,10 @@ HERE WILL PASS THE DATA OFF TO OTHER QUARTO PAGES, TO LOAD DATA AS BELOW:
 
 ## Load the filtered dataset
 ```{julia}
-genosOnly_ind_SNP_ind_filtered_TEST = load(filename, "genosOnly_ind_SNP_ind_filtered")
-ind_with_metadata_indFiltered_TEST = load(filename, "ind_with_metadata_indFiltered")
-pos_SNP_filtered_TEST = load(filename, "pos_SNP_filtered")
+filename = string(baseName, tagName, ".ind_SNP_ind_filtered.jld2")
+genosOnly_ind_SNP_ind_filtered = load(filename, "genosOnly_ind_SNP_ind_filtered")
+ind_with_metadata_indFiltered = load(filename, "ind_with_metadata_indFiltered")
+pos_SNP_filtered = load(filename, "pos_SNP_filtered")
 println("Loaded the filtered data.")
 ```
 
@@ -575,15 +576,15 @@ plotGenomeFst(scaffolds_to_plot,
 
 ## Prepare data for Genotype-by-individual plots and PCA
 
-Remove the first column of the genotype matrix (which was an initial row number):
-```{julia}
-genosOnly = geno_ind_SNP_ind_filtered[:, Not(1)]
+NO LONGER NEEDED: Remove the first column of the genotype matrix (which was an initial row number):
+```julia
+# genosOnly = geno_ind_SNP_ind_filtered[:, Not(1)]
 ```
 
 For missing genotypes, change our code of `-1` to `missing`:
 
 ```{julia}
-genosOnly_with_missing = Matrix{Union{Missing, Int16}}(genosOnly)
+genosOnly_with_missing = Matrix{Union{Missing, Int16}}(genosOnly_ind_SNP_ind_filtered)
 genosOnly_with_missing[genosOnly_with_missing .== -1] .= missing;
 ```
 
@@ -1224,6 +1225,8 @@ try
 catch
     println("NOTICE: Figure for ", regionText, " could not be shown due to an unknown error.")
 end
+
+save("Figure_1b_from_Julia.svg", GW_wholeGenome_PCA.PCAfig)
 ```
 
 #### PCA plot of the east side of the ring, for one chromosome
@@ -1410,8 +1413,8 @@ f = CairoMakie.Figure()
 ax = Axis(f[1, 1],
     title = "Genomic PC1 around ring",
     xlabel = "Location around ring (km)",
-    ylabel = "Genomic PC1"
-)
+    ylabel = "Genomic PC1")
+hidedecorations!(ax, label = false, ticklabels = false, ticks = false) # hide background lattice
 jitterSize = 100   # in km
 x_plot_values = ind_with_metadata_indFiltered_wholeGenome.ring_km .+ jitterSize .* (rand(length(ind_with_metadata_indFiltered_wholeGenome.PC1)) .- 0.5)
 y_plot_values = ind_with_metadata_indFiltered_wholeGenome.PC1
@@ -1419,7 +1422,9 @@ for i in eachindex(groups_to_plot_PCA)
     selection = ind_with_metadata_indFiltered_wholeGenome.Fst_group .== groups_to_plot_PCA[i]
     CairoMakie.scatter!(ax, x_plot_values[selection], y_plot_values[selection], marker = :diamond, color=group_colors_PCA[i], markersize=10, strokewidth=0.5)
 end
-display(f);
+display(f)
+
+save("Figure_1c_from_Julia.svg", f)
 ```
 
 
